# raytracing

./: .gitignore  humanoid.stl  raytracing.cabal  space-invader.stl  test.pgm
spec/: VectorSpec.hs
src/: Camera.hs  Geometry.hs  Main.hs  PBM.hs  PNM.hs  Raytracing.hs  STL.hs  Screen.hs  Vector.hs
