cabal-version:       >=1.10

name:                raytracing
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Paweł Placzyński
maintainer:          placzynski.pawel@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable raytracing
  main-is:             Main.hs
  other-modules:       Vector
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  exposed-modules:     Vector
  build-depends:       base >=4.12 && <4.13
                     , groups
  hs-source-dirs:      src
