cabal-version:         2.4

name:                  raytracing
version:               0.1.0.0
author:                placzynski.pawel@gmail.com

library
  hs-source-dirs:      src
  build-depends:       base
                     , groups
                     , parsec
                     , text
                     , word-wrap
  exposed-modules:     STL, Screen, Camera, PNM, Geometry, Vector
  default-language:    Haskell2010

executable raytracing
  main-is:             Main.hs
  other-modules:       STL, Screen, Camera, PNM, Geometry, Vector
  build-depends:       base >=4.12
                     , groups
                     , parsec
                     , text
                     , word-wrap
  hs-source-dirs:      src
  default-language:    Haskell2010

-- test-suite spec
--   type:                exitcode-stdio-1.0
--   main-is:             Spec.hs
--   hs-source-dirs:      spec
--   build-depends:       base >=4.12 && <4.13
--                      , hspec ==2.*
--                      , raytracing
--   other-modules:       VectorSpec
--   default-language:    Haskell2010
--   build-tool-depends:  hspec-discover:hspec-discover == 2.*
